intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
/* ... */
ul.horizontal-list li {
	display: inline;
}

.resultados_consulta {
	text-align: center;
	font-size: 13px;
	font-weight: bold;
	padding: 5px;
	font-family: Arial, Helvetica, sans-serif;
	color: #fff;
	background-color: #4B5869;
}

.resultados_consulta a:hover {
	color: #b3be42;
	text-decoration: none;
}

.resultados_consulta a:visited {
	color: #848e19;
	text-decoration: none;
}

.filtros_reportes {
	font-size: 13px;
	display: table;
	margin: 0 auto;
	width: auto;
}

.filtros_reportes li {
	padding-top: 5px;
}

.filtros_reportes_izq {
	float: left;
	padding-right: 70px;
}

.filtros_reportes_der {
	float: right;
	overflow: auto;
}

.permissionHigh {
	background-color: #d40e2a;
}

.permissionMedium {
	background-color: #ffdd00;
}

.permissionLow {
	background-color: #68a928;
}

#divSancionesTiposSocios {
	float: left;
	margin: 4% 7% 5% 12%;
}

#divSancionesTiposPrestamos {
	float: left;
	margin: 4% 8% 5% 3%;
}

#divSancionesReglas {
	display: block;
	padding: 3% 12%;
}

.highlight {
	background-color: #c4cd68;
}

.botonera_estantes {
	position: relative;
	float: right;
	width: 30%;
}

#footer {
	background-image: url(../imagenes/fondo_footer.png);
	background-color: #f7f6f6;
	text-align: center;
	padding: 1%;
	margin-top: 1%;
	-moz-border-radius-topleft: 8px;
	-moz-border-radius-topright: 8px;
	-moz-border-radius-bottomleft: 8px;
	-moz-border-radius-bottomright: 8px;
	background-repeat: repeat-x;
	height: 10px;
}

#marca div {
	height: 30px;
}

#marca {
	background-color: #35414F;
	height: 62px;
	clear: both;
}

#footer-info{
	text-align: center;
	color: #FEFEFE;
}

#footer-info a{
    color: inherit;
    font-style: none;
}

fieldset.main {
	width: 100%;
}

ul.listado_sin_margen {
	padding-left: 0px;
    clear: both;
}

.listado_sin_margen li {
    margin-left: 0px;
}

ul.listado_a_izquierda {
	padding-left: 0px;
	text-align: left;
}

.listaMenuBotones li {
	width: 100%;
}

.listaCondicionesHorizontales {
	display: table;
}

.listaCondicionesHorizontales li div {
	float: left;
	padding: 3px;
}

label {
	display: block;
	clear: both;
	float: left;
	margin-right: 13px;
	padding-right: 10px;
	position: relative;
	text-align: right;
	margin-top: 5px;
	width: auto;
}

.toggle_container {
	background: #F0F0F0;
	border-top: 1px solid #D6D6D6;
	clear: both;
	font-size: 1.1em;
	margin: 0 0 5px;
	overflow: hidden;
	padding: 0;
}

h2.trigger {
	float: left;
	font-size: 2em;
	font-weight: normal;
	height: 20px;
	line-height: 20px;
	margin: 0 0 5px;
}

.botonera_horizontal {
	display: inline-table;
}

.nivel2Lateral {
	font-family: "Trebuchet MS", "Verdana", "Arial";
	font-size: 10pt;
	color: #000000;
	font-weight: normal;
}

.nivel2Barra {
/* 	border: 1px solid; */
	overflow: auto;
	width: 100%;
	height: 600px;
}

.nivel1Barra {
	border: 1px solid;
	overflow: auto;
	width: 100%;
}

.nivel1Lateral {
	border: 1px solid #999999;
	margin-bottom: 15px;
	padding: 11px;
}

.lateral {
	clear: left;
	float: left;
	width: 22%;
	margin-bottom: 15px;
}

.centro {
	margin-bottom: 10px;
	margin-left: 1%;
	text-align: justify;
	width: 76%;
	float: right;
}

#sanciones {
	clear: both;
}

fieldset.accionesUsuarios {
	float: right;
	margin-left: 5%;
	width: 30%;
}


#file-uploader{
    float: left;
    width: 100%;
}

.divDatosUsuario {
	float: left;
}

.mensajes_informacion {
	background-color: #FFFFE1;
	border: 0;
	text-decoration: none;
	font-size: 12pt;
	font-family: verdana;
	color: #f2f2f2;
	font-weight: bold;
	text-align: center;
}

.showhelp {
	background: transparent url(../imagenes/iconos/ayuda.png) no-repeat;
	height: 25px;
	width: 25px;
	cursor: pointer;
	float: right;
}

.titulo_legend {
	font-weight: bold;
	font-size: 12px;
	border: none;
	color: #FFF9E7;
	font-family: Arial, Helvetica, sans-serif;
/* Nuevo, con el acabado abrazador. Si no gusta, sacar desde acá para abajo */ 
	background: url("images/fondo_label.png") repeat-x scroll 0 0 transparent;
    height: 36px;
    max-width: 427;
	margin-left: -17px;
    margin-top: 9px;
    padding-left: 15px;
	
}

.titulo_legend_resaltado {
	font-weight: bold;
	font-size: 12px;
	font-family: Arial, Helvetica, sans-serif;
	padding: 2px;
}

.titulo_legend_warning {
	font-weight: bold;
	color: #CC0033;
}

#mensajes {
	color: #666600;
}

.columna_izq {
	float: left;
	width: 50%;
}

div.fileinputs {
	float: left;
}

div.fakefile {
	margin-top: -24px;
	z-index: 1;
}

input.file {
	position: relative;
	text-align: right;
	-moz-opacity: 0;
	filter: alpha(opacity : 0);
	opacity: 0;
	z-index: 2;
}

.permisos_box {
	clear: both;
	display: block;
}

.inline_input {
	float: left;
}

.inline_input label {
	float: left;
	margin: 0;
	padding: 0;
}

.inline_input input {
	float: left;
}

.userImage img {
	height: 50px;
	width: 50px;
}

.user_icon {
	line-height: 1.2;
	clear: both;
	float: none;
}

.user_icon img {
	padding-right: 0.8em;
	vertical-align: middle;
	border: 0;
	float: left;
}

#me_name {
	font-size: 2.35em;
	color: #4B5869;
	float: left;
	padding-left: 2px;
}

.url {
	border: none;
	text-decoration: none;
}

.culture_Select {
	font-size: 9pt;
	width: auto;
	padding-left: 2%;
}

.culture_selection {
	width: 60px;
	margin: 0;
    margin-top: 20px;
	padding-left: 52px;
	height: 25px;
	float: left;
}

.culture_selection li {
    width: 25px;
    float: left;
}

.sorting_1 {
	background-color: #C0C0C0;
}

.dataTables_info {
	background-color: #999900;
}

.titulo_result {
	text-decoration: none;
	text-align: left;
}

.datos_tabla td {
	text-align: center;
}


.datos_tabla td a{
    color: #35414F;
}

.datos_tabla {
	width: 100%;
}

.warning {
	background-color: #990000;
	height: 45px;
}

.warning p{
    text-align: center;
    vertical-align: middle;
    color: InfoBackground;
    font-weight: bold;
    font-size: 14pt;
    padding: 0;
    margin: 0;
}

.error_en_parametros {
	color: red;
	text-align: center;
}

/*
.detalle_sanciones_sancionado{background-color:#CC3333;}
.auth_info{background-color:#003366;}
/* ... */

